# Graphics-Engine

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  compile.bat  compile.sh  imgui.ini
assets/models/axis/: axis.mtl
assets/models/tree/: tree.mtl
assets/shaders/default/: FragmentShader.glsl  VertexShader.glsl
assets/shaders/terrain/: FragmentShader.glsl  VertexShader.glsl
assets/shaders/test/: FragmentShader.glsl  VertexShader.glsl
dependencies/glad/: glad.c
dependencies/glfw-3.3/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
dependencies/glfw-3.3/docs/: Doxyfile  Makefile  cmake_install.cmake  warnings.txt
dependencies/glfw-3.3/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
dependencies/glfw-3.3/src/: Makefile  cmake_install.cmake  win32_init.c  win32_platform.h
dependencies/glfw-3.3/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  vulkan  windows
dependencies/imgui/: imgui.cpp  imgui_impl_opengl3.cpp
dependencies/others/include/: stb_image.h
source/: main.cpp
source/common/: Geometry.hpp  Material.hpp  PerlinNoise.hpp  Ray.hpp  Vectors.hpp  Vertex.hpp
source/engine/: Camera.cpp  Camera.hpp  Display.cpp  Display.hpp  GameModels.cpp  GameModels.hpp  Light.cpp  Light.hpp  Model.cpp  Model.hpp
source/engine/GUI/: GUI.cpp  GUI.hpp
source/engine/assets/: AssetLoader.cpp  AssetLoader.hpp  ModelLoader.cpp  ModelLoader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
source/entities/: Entities.cpp  Entities.hpp  Entity.cpp  Entity.hpp  Player.cpp  Player.hpp
source/entities/world/: Terrain.cpp  (+4 more)
source/include/: glad.h
source/logic/: SceanHandler.cpp  SceanHandler.hpp
(+92 files in other folders)
